# Maze

./: CMakeLists.txt  Maze.cpp  README.md
config/: Application.json
src/Common/inc/: Common.hpp  Utility.hpp
src/Logger/inc/: ConfigParser.hpp  Logger.hpp
src/Logger/src/: ConfigParser.cpp  Logger.cpp
src/Manager/inc/: Manager.hpp
src/Manager/src/: Manager.cpp
src/Platform/api/: IPlatform.hpp
src/Platform/inc/: Block.hpp  Grid.hpp  PlatformHandler.hpp
src/Platform/src/: Grid.cpp
